# syncdesk

./: .gitignore  Dockerfile  ONE_SHOT_BUILD_PROMPT.md  README.md  bugs.md  docker-compose.yml  figma_ready_component_specs.md  main.py  prompt_plan.md  prompt_plan_frontend.md  pyproject.toml  spec.md  todo.md  todo_frontend.md
backend/: .env.example  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 70ba141d3be2_add_transport_abuse_snooze_audit_soft_.py  768234247bbe_add_tickets_ticket_messages_internal_.py  7d18f1bce29a_add_users_and_otps.py  893cef1493f1_add_students_and_parent_students.py  a498fbfe4ff0_add_satisfied_at_and_ticket_reopens.py  de8700ddb241_add_announcements_and_reads.py
backend/app/: __init__.py  main.py  seed.py
backend/app/api/: __init__.py  admin.py  announcements.py  auth.py  config.py  deps.py  health.py  me.py  tickets.py
backend/app/core/: __init__.py  config.py  db.py  logging.py  security.py
backend/app/models/: __init__.py  announcement.py  audit.py  base.py  student.py  ticket.py  transport.py  user.py
backend/app/schemas/: __init__.py  announcement.py  auth.py  student.py  ticket.py
backend/app/services/: __init__.py  abuse_service.py  announcement_service.py  audit_service.py  auth_service.py  guardrails.py  notifications.py  otp_service.py  routing.py  (+1 more)
backend/tests/: __init__.py  conftest.py  test_announcements_api.py  test_auth.py  test_auth_role.py  test_db.py  test_e2e_ticket_flow.py  test_guardrails.py  test_health.py  test_me_students.py  test_models_ticket.py  test_models_user.py  test_tickets_api.py
(+67 files in other folders)
